--- a/.gitignore
+++ b/.gitignore
@@ -8,36 +8,36 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## User settings
-xcuserdata/
+iOS/xcuserdata/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
+iOS/*.xcscmblueprint
+iOS/*.xccheckout
 
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
-*.moved-aside
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
+iOS/build/
+iOS/DerivedData/
+iOS/*.moved-aside
+iOS/*.pbxuser
+iOS/!default.pbxuser
+iOS/*.mode1v3
+iOS/!default.mode1v3
+iOS/*.mode2v3
+iOS/!default.mode2v3
+iOS/*.perspectivev3
+iOS/!default.perspectivev3
 
 ## Obj-C/Swift specific
-*.hmap
+iOS/*.hmap
 
 ## App packaging
-*.ipa
-*.dSYM.zip
-*.dSYM
+iOS/*.ipa
+iOS/*.dSYM.zip
+iOS/*.dSYM
 
 ## Playgrounds
-timeline.xctimeline
-playground.xcworkspace
+iOS/timeline.xctimeline
+iOS/playground.xcworkspace
 
 # Swift Package Manager
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
@@ -236,3 +236,6 @@ InitTestScene*.unity
 
 
 # End of https://www.toptal.com/developers/gitignore/api/unity
+
+
+
