--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ iOS/playground.xcworkspace
 # Add this line if you want to avoid checking in source code from the Xcode workspace
  *.xcworkspace
 
+ Pods/*
+
 # Carthage
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
